[gd_scene load_steps=11 format=3 uid="uid://dhnpite2foeeu"]

[ext_resource type="Script" path="res://hero.gd" id="1_c28ts"]
[ext_resource type="Texture2D" uid="uid://cvsbh45vf3mhc" path="res://Assets/Heroes/Cleric.png" id="1_o0ucq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oor3o"]
atlas = ExtResource("1_o0ucq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dwgl"]
atlas = ExtResource("1_o0ucq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scl3j"]
atlas = ExtResource("1_o0ucq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq4u8"]
atlas = ExtResource("1_o0ucq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x66xq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oor3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dwgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scl3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq4u8")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wimg"]
size = Vector2(12.5, 21.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqf38"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6j8r"]
bg_color = Color(0.6, 0.024, 0.024, 1)

[node name="Hero" type="Node2D"]
script = ExtResource("1_c28ts")

[node name="Idle_animation" type="AnimatedSprite2D" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(1, -3)
rotation = -0.0159986
scale = Vector2(1.6, 1.595)
sprite_frames = SubResource("SpriteFrames_x66xq")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.525025

[node name="HitBox" type="Area2D" parent="Idle_animation"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Idle_animation/HitBox"]
position = Vector2(-0.25, 0.749996)
shape = SubResource("RectangleShape2D_7wimg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="healthBar" type="ProgressBar" parent="."]
offset_left = -27.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -38.0
theme_override_styles/background = SubResource("StyleBoxFlat_vqf38")
theme_override_styles/fill = SubResource("StyleBoxFlat_h6j8r")
max_value = 10.0
step = 1.0
value = 5.0
show_percentage = false

[connection signal="area_entered" from="Idle_animation/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="Idle_animation/HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
